src/common/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&family=Secular+One&display=swap');

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.PageWrapper {
  padding: 5%;
}

.RevsHeader {
  background-color: #842323;
  color: #fff;
}

.custom-btn {
  background-color: #fff;
  font-family: 'Jost', sans-serif;
  font-weight: 800;
  color: #842323;
  border: none;
  margin: 5px;
}

.custom-btn:hover {
  box-shadow: 2px;
  color: #5f1a1a;
  background-color: rgb(219, 217, 217);
  transition: .5s;
}

.right-aligned {

  justify-content: flex-end;
}

